# open-screenstudio

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml  general_feedback.yml  missing_feature.yml  pain_point.yml
.opencode/plans/: 1768579431442-curious-meadow.md  1768580171158-gentle-garden.md  phase-3-input-tracking.md  phase-5-cursor-smoothing.md
docs/: COMPARISON.md  FEATURES.md  ROADMAP.md  TECHNICAL_PLAN.md  VISION.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/capture/: audio.rs  mod.rs
src-tauri/src/capture/input/: channel.rs  mod.rs  types.rs
src-tauri/src/capture/macos/: input.rs  mod.rs  screen.rs  system_audio.rs
src-tauri/src/capture/windows/: input.rs  mod.rs
src-tauri/src/commands/: mod.rs  processing.rs  recording.rs  window.rs
src-tauri/src/processing/: cursor_smoothing.rs  mod.rs  spring.rs
src-tauri/src/recorder/: channel.rs
src/components/editor/: CursorOverlay.tsx  EditorView.tsx
src/components/recording/: RecordingView.tsx
src/processing/: cursorSmoothing.ts  spring.ts
