[package]
name = "open-screenstudio"
version = "0.1.0"
description = "Beautiful screen recordings, made simple. Open source."
authors = ["Crafter Station"]
edition = "2021"
license = "MIT"
repository = "https://github.com/crafter-station/open-screenstudio"

[lib]
name = "open_screenstudio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
parking_lot = "0.12"
tempfile = "3"
urlencoding = "2"

# Audio
cpal = "0.15"

# Platform: macOS
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSDictionary", "NSData", "NSGeometry", "NSObject"] }
objc2-app-kit = { version = "0.2", features = ["NSCursor", "NSEvent", "NSImage", "NSBitmapImageRep", "NSImageRep"] }
block2 = "0.5"
core-foundation = "0.10"
core-graphics = "0.24"
cocoa = "0.26"
dispatch = "0.2"
# ScreenCaptureKit for native system audio capture (macOS 12.3+)
screencapturekit = "1.5"
# Note: screencapturekit crate has Swift runtime issues on some systems
# Using CGWindowListCreateImage for now as a simpler fallback

# Platform: Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
